Fix layout problems header and hamburger menu

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,19 +17,19 @@ body {
   flex-direction: column;
   align-content: center;
   text-align: center;
-  margin-top: 75px;
-  margin-bottom: 55px;
+  margin: 75px;
 }
 
 .presentamos-header h1 {
   font-family: "CarlitoRegular";
-  font-size: 32px;
-  font-weight: 300;
+  font-size: 36px;
+  font-weight: 500;
 }
 
 .presentamos-header h2 {
   font-family: "CarlitoRegular";
   font-size: 24px;
+  font-weight: 600;
 }
 
 .presentamos-container p {
@@ -45,14 +45,14 @@ body {
 }
 
 .image-alfredo {
-  width: 100%;
+  width: 90%;
   height: auto;
   object-fit: cover;
   margin-bottom: 50px;
 }
 
 .image-fran {
-  width: 100%;
+  width: 90%;
   height: auto;
   object-fit: cover;
   margin-bottom: 50px;
@@ -60,7 +60,7 @@ body {
 
 .presentamos-alfredo-header {
   font-family: "CarlitoBold";
-  font-size: 24px;
+  font-size: 28px;
   color: #f55f28;
   text-align: center;
 }
@@ -74,11 +74,13 @@ body {
 }
 
 .presentamos-fran-header {
-  font-family: "CarlitoRegular";
-  font-size: 24px;
-  font-weight: bold;
-  color: #f55f28;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
   text-align: center;
+  font-family: "CarlitoBold";
+  font-size: 28px;
+  color: #f55f28;
 }
 
 .presentamos-fran-text {
@@ -187,18 +189,21 @@ body {
   margin: 8px;
 }
 
+/* HEADER */
 .header-navbar {
   display: flex;
   flex-direction: column;
   align-content: center;
   text-align: center;
+  /* position: absolute; */
+
 }
 
 mr-auto {
   display: flex;
-  position: absolute;
-  width: 414px;
-  height: 746px;
+  /* position: absolute; */
+  /* width: 414px; */
+  /* height: 746px; */
   left: 1px;
   top: -31px;
   font-family: "CarlitoRegular";
@@ -208,8 +213,8 @@ mr-auto {
 }
 
 .container-header {
-  width: 414px;
-  height: 709px;
+  /* width: 414px; */
+  /* height: 709px; */
   left: 0px;
   top: 0px;
   background-color: #f8dccc;
@@ -230,14 +235,13 @@ mr-auto {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 414px;
-  height: 709px;
+  /* width: 414px; */
+  /* height: 709px; */
   left: 23px;
   top: 0px;
 }
 
 .container h1 {
-  width: 352px;
   height: 48px;
   left: 23px;
   top: 185px;
@@ -349,4 +353,56 @@ strong {
 
 .music_apps a {
   margin: 12px;
+}
+
+@media screen and (min-width: 769px) {
+
+  /* NOS PRESENTAMOS section */
+  
+  .presentamos-header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 75px;
+    margin-bottom: 75px;
+    border: 1px solid red;
+  }
+
+  .presentamos-header h1 {
+    font-family: "CarlitoRegular";
+    font-size: 36px;
+    font-weight: 500;
+  }
+  
+  .presentamos-header h2 {
+    font-family: "CarlitoRegular";
+    font-size: 24px;
+    font-weight: 600;
+  }
+  
+  .presentamos-container p {
+    font-family: "CarlitoRegular";
+    font-size: 20px;
+  }
+  
+
+  .section-alfredo {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+
+  .section-fran {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+
+  .image-fran {
+    width: 70%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 50px;
+  }
+
 }
